objects/Labor_Rates__c.object
<CustomObject>
    <description>Used with professional services to determine the labor rate in the caluclated field for margin.  As an object with the idea that in the future the labor rate should be set on the individual resources for a better margin calculation.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retroactive_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used with on create flow to determine if existing open projects will be forced into the new rate or not.  set with replacement new button</description>
        <inlineHelpText>Should all currently open projects get this new rate?</inlineHelpText>
        <label>Retroactive Change?</label>
        <type>Checkbox</type>
    </fields>
    <label>Labor Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rate__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Rate__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <nameField>
        <label>Labor Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labor Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>